2009-04-08  Johannes Schmid  <jhs@gnome.org>

	* configure.in:
	* plugins/Makefile.am:
	Moved scintilla plugin to anjuta-extras

2009-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/plugin.c (ipreferences_merge):
	Fixed error->msg vs. error->message problem in DEBUG_PRINT macro

2009-04-07  Johannes Schmid  <jhs@gnome.org>

	* configure.in:
	* plugins/Makefile.am:
	Moved sample1, indent, class-inheritance, valgrind and profiler to
	anjuta-extras repository.

2009-04-07  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-preferences.c
	(anjuta_preferences_register_all_properties_from_builder_xml),
	(anjuta_preferences_add_from_builder):
	* libanjuta/anjuta-preferences.h:
	Added methods to add pages from gtkbuilder instead of glade
	
	* plugins/sourceview/Makefile.am:
	* plugins/sourceview/anjuta-editor-sourceview.glade:
	* plugins/sourceview/anjuta-editor-sourceview.ui:
	* plugins/sourceview/plugin.c (on_font_check_toggled),
	(ipreferences_merge), (ipreferences_unmerge):
	* plugins/sourceview/sourceview.c (sourceview_new):
	Replace libglade with gtkbuilder

	* scripts/build-schemas.mk:
	* scripts/builder2schema.pl:
	* scripts/Makefile.am
	Add a new script to generate schemas from gtkbuilder instead of glade
	files and adjusted Makefile.

2009-04-06  Johannes Schmid  <jhs@gnome.org>

	Based on patch from : Maxim Ermilov <zaspire@rambler.ru>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/build-basic-autotools/plugin.c
	(build_context_destroy_view), (build_regex_load),
	(on_build_terminated), (build_set_animation),
	(build_get_context_with_message):
	* plugins/message-view/anjuta-msgman.c
	(anjuta_msgman_set_view_icon),
	(anjuta_msgman_set_view_icon_from_stock):
	* plugins/message-view/anjuta-msgman.h:
	* plugins/message-view/plugin.c
	(ianjuta_msgman_set_view_icon_from_stock),
	(ianjuta_msgman_set_view_icon), (ianjuta_msgman_iface_init):
  Add animation for running builds. Automatically cancel build once the
  message tab is destroyed. (#564128)	