@@ -83,7 +83,7 @@ AM_CFLAGS="$AM_CFLAGS $WARN_CFLAGS"
 dnl Enable debugging mode
 AC_ARG_ENABLE(debug,
   AC_HELP_STRING([--enable-debug],[Enable debug messages]),
-  AM_CFLAGS="$AM_CFLAGS -DDEBUG"
+  AM_CFLAGS="$AM_CFLAGS -DDEBUG")
 AC_SUBST(AM_CFLAGS)
 
 ANJUTA_LDFLAGS="-no-undefined"
