@@ -1,6 +1,13 @@
 2009-04-08  Johannes Schmid  <jhs@gnome.org>
 
 	* configure.in:
+	* manuals/reference/libanjuta/Makefile.am:
+	* src/Makefile.am:
+	Fixed some build issues
+
+2009-04-08  Johannes Schmid  <jhs@gnome.org>
+
+	* configure.in:
 	* plugins/Makefile.am:
 	Moved scintilla plugin to anjuta-extras
 
